Assignment 4/compile_output
C:\mujava\result\OptionMenu\traditional_mutants\void_mainMenu()\VDL_9\OptionMenu.java:216: error: illegal start of expression
        while ( ) {
                ^
1 error
